# data-pipeline

./: .gitignore  CHANGELOG.md  README.md  changelog.sh  main.py  pyproject.toml  requirements.txt
data/: Chocolate Sales.json
data_pipeline/: main.py
data_pipeline/data/: Chocolate Sales.xlsx
data_pipeline/output/: processed_data.csv
data_pipeline/src/: api.py  config.yaml  pipeline.py  utils.py
data_pipeline/tests/: test_api.py  test_pipeline.py
src/: api.py  config.yaml  pipeline.py  utils.py
